--- a/MealPlanner/MealPlanner/MealPlanner.csproj
+++ b/MealPlanner/MealPlanner/MealPlanner.csproj
@@ -9,11 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\GroceryListGeneratorVersion1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="house.png" />
     <None Remove="house.webp" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
